Bug 507801 - Transaction import summary dialog shows up twice.
Summary: Transaction import summary dialog shows up twice.
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: importer (other bugs)
Version First Reported In: 5.2.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-03 07:53 UTC by Thomas Baumgart
Modified: 2025-08-03 08:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2025-08-03 07:53:35 UTC
SUMMARY
When importing a CSV statement file (either manually or via web-connect) the transaction import summary dialog shows up twice.

STEPS TO REPRODUCE
1. Import CSV file into account

OBSERVED RESULT
Transaction import summary dialog shows up twice.

EXPECTED RESULT
Transaction import summary dialog shows up only once.

ADDITIONAL INFORMATION
Downloading transactions using the KBanking plugin shows the summary only once.
Comment 1 Thomas Baumgart 2025-08-03 08:04:29 UTC
I double checked and it only shows up twice when using web-connect.
Comment 2 Thomas Baumgart 2025-08-03 08:08:45 UTC
Git commit 1fa0eef43b997ca207ce5a916397ef3def528545 by Thomas Baumgart.
Committed on 03/08/2025 at 08:07.
Pushed by tbaumgart into branch 'master'.

Show transaction import summary only once

When using web-connect to download transaction data, the download
summary appeared twice in a row at the end. This change removes that
second display of the summary.
FIXED-IN: 5.2.1

M  +0    -4    kmymoney/kmymoney.cpp

https://invent.kde.org/office/kmymoney/-/commit/1fa0eef43b997ca207ce5a916397ef3def528545
Comment 3 Thomas Baumgart 2025-08-03 08:09:19 UTC
Git commit 08313b88ad426b2db740fe0e34260bd33f377fbd by Thomas Baumgart.
Committed on 03/08/2025 at 08:08.
Pushed by tbaumgart into branch '5.2'.

Show transaction import summary only once

When using web-connect to download transaction data, the download
summary appeared twice in a row at the end. This change removes that
second display of the summary.
FIXED-IN: 5.2.1
(cherry picked from commit 1fa0eef43b997ca207ce5a916397ef3def528545)

M  +0    -4    kmymoney/kmymoney.cpp

https://invent.kde.org/office/kmymoney/-/commit/08313b88ad426b2db740fe0e34260bd33f377fbd