Show transaction import summary only once

When using web-connect to download transaction data, the download
summary appeared twice in a row at the end. This change removes that
second display of the summary.

BUG: 507801
FIXED-IN: 5.2.1
(cherry picked from commit 1fa0eef43b997ca207ce5a916397ef3def528545)